--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -1,64 +1,73 @@
 .cardLogin {
-  width: 100%;
+  width: 70vw;
+  height: auto;
+  max-width: 1400px;
+  max-height: 1400px;
   display: flex;
-  box-shadow: 0px 5px 12px #d0d0d0;
-  max-width: 700px;
-  border-top: 4px solid;
-  border-top-color: currentcolor;
-  border-color: #28a745;
   flex-direction: column;
-  padding: 30px;
-  margin-top: 100px;
+  align-items: center;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin: 100px auto;
+  background-color: #ffffff;
+  border-radius: 8px;
+  position: relative;
+  aspect-ratio: 1 / 1;
 }
-.cardHeader {
-  text-align: center;
+
+.cardLogin > div {
+  display: flex;
+  width: 100%;
+  height: 100%;
 }
-.title {
-  font-size: 30px;
-  color: black;
-  /* font-weight: bold; */
+
+.firstBlock,
+.secondBlock {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.firstBlock {
+  flex: 1.5;
+  background-color: white;
+  background-image: url('../assets/images/background2.gif');
+  background-repeat: no-repeat;
+  background-size: cover; 
+  background-position: center;
+  border-right: 3px dotted red;
+}
+
+.secondBlock {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: white;
+  border-radius: 8px;
   padding: 20px;
 }
-.formLogin {
-  margin: 30px 0px;
-}
-.textField {
-  margin: 10px 0px;
-}
-.textFields {
-  justify-content: space-around;
-}
-/* .button {
-    width: 100%;
-    background-color: #28a745;
-    text-align: center;
-    color: white;
-    padding: 8px 0px;
-    border-radius: 4px;
-  } */
-.button {
-  width: 100%;
-  background-color: #28a745;
-  text-align: center;
-  color: white;
-  border-radius: 4px;
-  /* padding: 8px 0px; */
-}
-.button:hover {
-  background-color: rgb(81, 170, 102);
-}
-.fieldTypes {
+
+.cardHeader {
   display: flex;
   flex-direction: column;
-  gap: 30px;
-  padding: 30px 0px;
+  gap: 10px;
 }
-/* .inputTitle{
-      padding: 10px 0px 0px 0px;
-    } */
-.schedule {
-  padding: 50px;
+
+.title {
+  font-size: 46px;
+  font-weight: bold;
+  color: #f33219;
 }
-.schedule:hover {
-  color: #3d856d;
+
+.subTitle {
+  font-size: 18px;
+  color: gray;
+  margin: 0;
+  text-align: left; /* Garante que o texto está alinhado à esquerda */
+  padding: 10px;
 }
+
+
