--- a/src/styles/TextField.module.css
+++ b/src/styles/TextField.module.css
@@ -13,3 +13,8 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   font-size: 16px;
 }
+
+.container:focus {
+  border-color: #f33219;
+  outline: none; 
+}
