--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -1,8 +1,35 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
 .container {
   width: 100%;
+  height: 100vh; 
   display: flex;
-  background-color: #ffffff;
   flex-direction: column;
-  align-items: center;
+  align-items: center; /* Alinha os itens no centro horizontalmente */
+  justify-content: center; /* Alinha os itens no centro verticalmente, se necessário */
   font-size: 18px;
+  background-color: #eeece7;
+  gap: 80px; 
+  background-image: url('../assets/images/background1.avif');
+  background-repeat: no-repeat;
+  background-size: cover; 
+  background-position: center;
+}
+
+.errorText {
+  color: red;
+  font-size: 14px;
+  margin-top: 5px;
+}
+
+.orText {
+  margin: 0; 
+  padding: 10px 0; 
+  font-size: 16px;
+  color: gray;
+  text-align: center; 
 }
