--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -1,8 +1,8 @@
 .cardLogin {
-  width: 70vw;
+  width: 65vw;
   height: auto;
-  max-width: 1400px;
-  max-height: 1400px;
+  max-width: 1300px;
+  max-height: 800px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,7 +12,7 @@
   background-color: #ffffff;
   border-radius: 8px;
   position: relative;
-  aspect-ratio: 1 / 1;
+  opacity: 0.9;
 }
 
 .cardLogin > div {
@@ -33,11 +33,13 @@
 .firstBlock {
   flex: 1.5;
   background-color: white;
-  background-image: url('../assets/images/background2.gif');
+  background-image: url("../assets/images/background2.gif");
   background-repeat: no-repeat;
-  background-size: cover; 
+  background-size: cover;
   background-position: center;
   border-right: 3px dotted red;
+  padding: 50px;
+  box-sizing: border-box;
 }
 
 .secondBlock {
@@ -69,5 +71,3 @@
   text-align: left; /* Garante que o texto está alinhado à esquerda */
   padding: 10px;
 }
-
-
