--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   height: 100%;
@@ -6,17 +7,17 @@ html, body {
 
 .container {
   width: 100%;
-  height: 100vh; 
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center; /* Alinha os itens no centro horizontalmente */
-  justify-content: center; /* Alinha os itens no centro verticalmente, se necessário */
+  align-items: center;
+  justify-content: center;
   font-size: 18px;
   background-color: #eeece7;
-  gap: 80px; 
-  background-image: url('../assets/images/background1.avif');
+  gap: 80px;
+  background-image: url("../assets/images/background3.avif");
   background-repeat: no-repeat;
-  background-size: cover; 
+  background-size: cover;
   background-position: center;
 }
 
@@ -27,9 +28,9 @@ html, body {
 }
 
 .orText {
-  margin: 0; 
-  padding: 10px 0; 
+  margin: 0;
+  padding: 10px 0;
   font-size: 16px;
   color: gray;
-  text-align: center; 
+  text-align: center;
 }
