--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -1,27 +1,30 @@
 .container {
-    display: flex;
-    height: 100vh;
-  }
-  
-  .sidebar {
-    flex: 0 0 250px;
-  }
-  
-  .mainContent {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    box-sizing: border-box;
-    background-color: #f0f0f0;
-  }
-  
-  .taskCards {
-    display: flex;
-    gap: 100px;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 20px;
-  }
-  
+  display: flex;
+  height: 100vh;
+  background-image: url("../assets/images/background3.avif");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.sidebar {
+  flex: 0 0 250px;
+}
+
+.mainContent {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: #f0f0f0;
+}
+
+.taskCards {
+  display: flex;
+  gap: 100px;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 20px;
+}
