--- a/src/styles/TaskCard.module.css
+++ b/src/styles/TaskCard.module.css
@@ -6,6 +6,8 @@
   padding: 20px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
+  overflow: auto;
+  position: relative;
 }
 
 .taskCard:hover {
@@ -14,10 +16,36 @@
 
 .title {
   font-size: 1.4em;
-  margin-bottom: 20px;
-  color: #333;
+  margin: 0;
   padding: 10px;
   border-radius: 6px;
+  overflow-wrap: break-word;
+  position: relative;
+  color: #000000;
+  margin-bottom: 20px;
+}
+
+.title::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 5px;
+  height: 100%;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+}
+
+.title.todo::before {
+  background-color: #2196f3;
+}
+
+.title.working::before {
+  background-color: #ff9800;
+}
+
+.title.done::before {
+  background-color: #4caf50;
 }
 
 .tasks {
@@ -32,16 +60,19 @@
   border-radius: 8px;
   padding: 15px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  overflow-wrap: break-word;
 }
 
 .noTasks {
   color: #888;
   font-style: italic;
+  margin-top: 20px;
 }
 
 .addTaskContainer {
   margin-top: 20px;
   display: flex;
+  align-items: center;
   gap: 12px;
 }
 
@@ -50,6 +81,7 @@
   padding: 12px;
   border: 1px solid #e0e0e0;
   border-radius: 8px;
+  box-sizing: border-box;
 }
 
 .addButton {
@@ -63,4 +95,52 @@
 
 .addButton:hover {
   background-color: #45a049;
+}
+
+.startButtonContainer {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+}
+
+.startButton {
+  padding: 8px 16px;
+  border: none;
+  border-radius: 8px;
+  background-color: #2196f3;
+  color: white;
+  cursor: pointer;
+}
+
+.startButton:hover {
+  background-color: #1976d2;
+}
+
+.completeButton {
+  margin-left: 10px;
+  background-color: #4caf50;
+  color: white;
+}
+
+.completeButton:hover {
+  background-color: #388e3c;
+}
+
+.editButton {
+  margin-left: 10px;
+  background-color: #ffc107;
+  color: white;
+}
+
+.editButton:hover {
+  background-color: #ffb300;
+}
+.saveButton {
+  margin-left: 10px;
+  background-color: #4caf50;
+  color: white;
+}
+
+.saveButton:hover {
+  background-color: #388e3c;
 }
