--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -1,5 +1,4 @@
-html,
-body {
+html, body {
   margin: 0;
   padding: 0;
   height: 100%;
@@ -17,7 +16,7 @@ body {
   gap: 80px;
   background-image: url("../assets/images/background3.avif");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; 
   background-position: center;
 }
 
